--- a/service/api-task/composer.json
+++ b/service/api-task/composer.json
@@ -1,4 +1,12 @@
 {
+  "authors": [
+    {
+      "name": "Nikita Porshnjakov",
+      "email": "n.porshnjakov@gmail.com",
+      "homepage": "https://www.linkedin.com/in/nikita-porshnjakov-3b902831/",
+      "role": "Software Engineer"
+    }
+  ],
   "require": {
     "slim/slim": "^3.0",
     "monolog/monolog": "^1.18"
@@ -8,6 +16,11 @@
   },
   "archive": {
     "exclude": ["vendor", ".DS_Store", "*.log"]
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
   },
   "autoload-dev": {
     "psr-4": { "Tests\\": "tests/" }
