--- a/service/api-task/composer.json
+++ b/service/api-task/composer.json
@@ -9,7 +9,9 @@
   ],
   "require": {
     "slim/slim": "^3.0",
-    "monolog/monolog": "^1.18"
+    "monolog/monolog": "^1.18",
+    "illuminate/database": "^5.8",
+    "justinrainbow/json-schema":"~2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "5.4.*"
